syntax = "proto2";
import "proto/common/Pagination.proto";
package message.order;
message recordReq {
    required int64 store_id = 1; // 商户id
    optional string start_date = 2; // 开始时间
    optional string end_date = 3; // 结束时间
    optional message.common.Pagination pagination = 4; // 分页
    optional int64 type = 5; // 类型：1-佣金转入，2-提现 3--后台导入奖金
}
